<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/nearbySearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nearby_search"
            android:background="@drawable/button_style"/>
        <Button
            android:id="@+id/citySearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/city_search"
            android:background="@drawable/button_style"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/city_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <EditText
            android:id="@+id/city_edit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_style"
            android:hint="@string/input_city"
            android:gravity="center"/>
        <EditText
            android:id="@+id/city_search_edit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_style"
            android:hint="@string/input_key"
            android:gravity="center"/>
        <Button
            android:id="@+id/city_search_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/search"/>
        <Button
            android:id="@+id/city_next_btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/next_data"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <EditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/button_style"
            android:hint="@string/input_key"
            android:paddingLeft="@dimen/edit_padding_left"/>
        <Button
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:text="@string/search"/>
        <Button
            android:id="@+id/next_data"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next_data"
            android:background="@drawable/button_style"/>
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />
</LinearLayout>
