<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/edit_margin_top">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan_name"
            android:gravity="right"
            android:paddingRight="@dimen/edit_padding_left"
            />
        <EditText
            android:id="@+id/plan_name"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            android:background="@drawable/edit_bg"
            android:paddingLeft="@dimen/edit_padding_left"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/edit_margin_top">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan_address"
            android:gravity="right"
            android:paddingRight="@dimen/edit_padding_left"/>
        <EditText
            android:id="@+id/plan_address"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            android:background="@drawable/edit_bg"
            android:paddingLeft="@dimen/edit_padding_left"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/edit_margin_top">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan_info"
            android:gravity="right"
            android:paddingRight="@dimen/edit_padding_left"/>
        <EditText
            android:id="@+id/plan_info"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="@dimen/info_edit_height"
            android:background="@drawable/edit_bg"
            android:paddingLeft="@dimen/edit_padding_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/edit_margin_top">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan_overhead"
            android:gravity="right"
            android:paddingRight="@dimen/edit_padding_left"/>
        <EditText
            android:id="@+id/plan_overhead"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            android:background="@drawable/edit_bg"
            android:paddingLeft="@dimen/edit_padding_left"
            android:singleLine="true"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/edit_margin_top">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan_start_time"
            android:gravity="right"
            android:paddingRight="@dimen/edit_padding_left"/>
        <Button
            android:id="@+id/plan_starttime"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            android:background="@mipmap/spinner_default"
            android:paddingLeft="@dimen/edit_padding_left"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/edit_margin_top">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plan_end_time"
            android:gravity="right"
            android:paddingRight="@dimen/edit_padding_left"/>
        <Button
            android:id="@+id/plan_endtime"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"
            android:background="@mipmap/spinner_default"
            android:paddingLeft="@dimen/edit_padding_left"/>
    </LinearLayout>

    <Button
        android:id="@+id/sava_plan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_plan"
        android:layout_marginTop="@dimen/edit_padding_left"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"/>
</LinearLayout>
